<resources>
    <string name="app_name">MusicMasti</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_song">Detail_Song</string>
    <string name="title_activity_temp">temp</string>
    <string name="lyrics">Hello
                        I was wondering if after all these years you like to meet
                        To go over everything
                        They say that time supposed to heal ya
                        But I ain done much healing</string>
    
    <string name="poster">Artist poster</string>
    <string name="tracks">Top Tracks</string>
    <string name="lyrics_title">Lyrics</string>

    <string name="widget_title">Favourites</string>
    <string name="adUnitId">ca-app-pub-2858442306305283/1864148655</string>
    <string name="adAppId">ca-app-pub-2858442306305283~7910682257</string>
</resources>
