 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailSongFragment">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/poster_back"
                android:id="@+id/poster"
                android:src="@drawable/down"
                android:contentDescription="@string/poster"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardBackgroundColor="@color/card_backgrnd"
            >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="10dp"
             >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textColor="@color/title_color"
                android:fontFamily="sans-serif"
                android:text="Can't Feel My Face"
                android:textSize="27dp"
                android:paddingLeft="10dp"
                android:layout_below="@+id/poster"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"
                />
            <ImageButton
                android:id="@+id/fav_button"
                android:layout_marginTop="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />
             </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Artist : Coldplay"
                 android:id="@+id/artistName"
                 android:layout_marginTop="0dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="7dp"
                 android:textSize="17sp"
                 android:textColor="@color/black"
                 android:gravity="left"
                 android:fontFamily="sans-serif"
                 android:textStyle="normal"
                 android:shadowDx="1"
                 android:shadowDy="1"
                 android:shadowColor="@color/black"
                 android:shadowRadius="2"
                 />
         </LinearLayout>
        </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
             android:id="@+id/detail_trailers_cardview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             app:cardBackgroundColor="@color/card_backgrnd"
             >

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="10dp">

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif"
                     android:paddingLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:textSize="28dp"
                     android:textColor="@color/title_color"
                     android:text="@string/tracks"
                     android:shadowDx="2"
                     android:shadowDy="2"
                     android:shadowRadius="3"
                     />


                 <!--put the trailer view code here-->
                 <HorizontalScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp">

                     <com.linearlistview.LinearListView
                         android:id="@+id/detail_trailers"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:divider="?android:dividerHorizontal"
                         android:showDividers="middle" />

                 </HorizontalScrollView>

             </LinearLayout>

         </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardBackgroundColor="@color/card_backgrnd"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lyrics_title"
                    android:fontFamily="sans-serif"
                    android:textSize="30dp"
                    android:textColor="@color/title_color"
                    android:paddingLeft="10dp"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fav_button"
                    android:text="@string/lyrics"
                    android:textSize="20dp"
                    android:textColor="@color/lyrics_color"
                    android:paddingLeft="15dp"
                    android:paddingBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/lyrics"
                    android:textStyle="italic"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowColor="@color/black"
                    android:shadowRadius="1"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
         
         <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             ads:adSize="BANNER"
             ads:adUnitId="@string/adUnitId">
         </com.google.android.gms.ads.AdView>
     </LinearLayout>

 </ScrollView>

